--- a/ASPNet8API/appsettings.json
+++ b/ASPNet8API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server = 9171-19165; DataBase = SuperHeroesDb; Trusted_Connection = true; TrustSeverCertificate = true;"
+    "DefaultConnection": "Server = 9171-19165; DataBase = SuperHeroesDb; Trusted_Connection = true; TrustServerCertificate = true;"
   },
   "Logging": {
     "LogLevel": {
